apps/awx/overlays/dev/operator-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: awx-operator-controller-manager
  namespace: awx
  annotations:
    argocd.argoproj.io/sync-wave: "1"
