apps/awx/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awx-ingress
  namespace: awx
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  ingressClassName: nginx
  rules:
  - host: awx.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: awx-homelab-instance-service
            port:
              number: 80
